--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <title>Reactjs | Page d'accueil</title>
     <meta charset="utf-8">
 </head>
+<style>
+    img {
+        width: 120px;
+    }
+</style>
 
 <body>
-    <h1>First page</h1>
-    <img src="logo" alt="logo " />
-
-</body>
+    <h1>React Applications | Home Page</h1><img src="logo.svg" alt="logo " /></body>
 
 </html>
