--- a/capstone-proj/public/index.html
+++ b/capstone-proj/public/index.html
@@ -8,7 +8,8 @@
 
 <body>
     <div id="root"></div>
-    <script src="/src/index.js"></script>
+    <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
+    <script type="text/babel" src="/src/index.js"></script>
 </body>
 
 </html>
