netflixclone readme update

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </style>
 
 <body>
-    <div class="container ">
+    <div class="container">
         <h1><img src="logo.svg " alt="logo " />React Applications | Home Page</h1>
         <div class="main">
             <h3>Liste des applications en Reactjs</h3>
@@ -41,6 +41,18 @@
                     <a href="moviesearch/public/index.html">Build a Moviesearch</a></li>
                 <li>
                     <a href="speedtypinggame/public/index.html">Build a speedtyping game app</a></li>
+                <li>
+                    <a href="profilcard/public/index.html">Profile Card UI Design</a>
+                </li>
+                <li>
+                    <a href="capstone-proj/public/index.html">Capstone Project</a>
+                </li>
+                <li>
+                    <a href="date-picker/public/index.html">Date Picker component</a>
+                </li>
+                <li>
+                    <a href="accordion/public/index.html">Component Accordion</a>
+                </li>
             </ul>
         </div>
     </div>
