--- a/netflix-clone/public/index.html
+++ b/netflix-clone/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="utf-8" />
@@ -11,6 +11,7 @@
 
 <body>
     <div id="root"></div>
+    <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
     <script src="/src/index.js"></script>
 </body>
