install app works

--- a/netflix-clone/public/index.html
+++ b/netflix-clone/public/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
     <title>Netflix</title>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
-    <title>React | Build a Netflix Clone</title>
 </head>
 
 <body>
     <div id="root"></div>
-    <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
-    <script src="/src/index.js"></script>
+    <script src="/src/index.pack.js"></script>
 </body>
 
 </html>
