--- a/netflix-clone/public/index.html
+++ b/netflix-clone/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="root"></div>
     <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
-    <script src="/src/index.pack.js"></script>
+    <script src="../src/index.js"></script>
 </body>
 
 </html>
