--- a/netflix-clone/public/index.html
+++ b/netflix-clone/public/index.html
@@ -13,9 +13,10 @@
 
 <body>
     <div id="root"></div>
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.14.4/firebase-firestore.js"></script>
-    <script src="../src/index.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.2/firebase-firestore.js"></script>
+    <script src="/src/index.pack.js"></script>
 </body>
 
 </html>
