signup signin validation

--- a/netflix-clone/public/index.html
+++ b/netflix-clone/public/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
-    <title>Netflix</title>
+    <title>Netflix-clone | React</title>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="/__/firebase/8.1.2/firebase-app.js"></script>
-    <script src="/__/firebase/8.1.2/firebase-analytics.js"></script>
+    <!-- <script src="/__/firebase/8.1.2/firebase-app.js"></script>
+    <script src="/__/firebase/8.1.2/firebase-analytics.js"></script> -->
     <script src="/__/firebase/init.js"></script>
 </head>
 
